projects layout created, accordions added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!--Footer-->
     <footer>
-        <div class="footer-content">
+        <div class="footerContent">
             <h3>Ted McGinness</h3>
             <p></p>
 
