--- a/projects.html
+++ b/projects.html
@@ -27,14 +27,47 @@
             </button>
         </div>
     </nav>
+    <section class="projects">
+        <h1 class="heading">Some of my Recent Projects</h1>
+        <div class="projectsContainer">
+            <div class="projectCard">
+                <!-- Photo by Pavel Danilyuk from Pexels -->
+                <img src="./imgs/RPS.jpeg" alt="Rock Paper Scissors" class="projectPic" />
+                <h3 class="projectTitle">Rock, Paper, Scissors</h3>
+                <button class="accordion">Section 1</button>
+                <div class="panel">
+                    <p>Lorem ipsum...</p>
+                </div>
 
+            </div>
+            <div class="projectCard">
+                <!-- Photo by Pavel Danilyuk from Pexels -->
+                <img src="./imgs/RPS.jpeg" alt="Rock Paper Scissors" class="projectPic" />
+                <h3 class="projectTitle">Rock, Paper, Scissors</h3>
+                <button class="accordion">Section 1</button>
+                <div class="panel">
+                    <p>Lorem ipsum...</p>
+                </div>
+
+            </div>
+            <div class="projectCard">
+                <!-- Photo by Pavel Danilyuk from Pexels -->
+                <img src="./imgs/RPS.jpeg" alt="Rock Paper Scissors" class="projectPic" />
+                <h3 class="projectTitle">Rock, Paper, Scissors</h3>
+                <button class="accordion">Section 1</button>
+                <div class="panel">
+                    <p>Lorem ipsum...</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 
     <!--Footer-->
     <footer>
-        <div class="footer-content">
+        <div class="footerContent">
             <h3>Ted McGinness</h3>
-            <p></p>
 
             <ul class="socials">
                 <li>
