skeleton for resume and links pages created. Styling change for header and footer

--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,51 @@
             <a href="bio.html">About Me</a>
             <a href="projects.html">Projects</a>
             <a href="resume.html">Resume</a>
-            <a href="contact.html">Contact Me</a>
+            <a class="active" href="contact.html">Contact Me</a>
             <button class="mobile-menu" id="mobile-menu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
         </div>
     </nav>
+    <section class="contact">
+        <div class="leftbox">
+            <div>
 
+                <ul>
+                    <li>Github: Link</li>
+                    <li>LinkIn: Link</li>
+                    <li>Email: ttmcginness22@gmail.com</li>
+                    <li>Phone: 630-487-0998</li>
+                    <li>WordPress Design: craftedwebsite.design</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="rightbox">
+
+            <div>
+                <h2>Education</h2>
+            </div>
+            <div>
+                <h3>
+                    General Assembly
+                </h3>
+                <p>
+                    Certificate: Software Engineering - January, 2022 - April, 2022</p>
+            </div>
+            <div>
+                <h3>
+                    Eastern Illinois University
+                </h3>
+                <p>
+                    Degree: Bachelors in Kinesiology - August, 2010 - May, 2013</p>
+            </div>
+        </div>
+
+
+
+
+    </section>
 
 
     <!--Footer-->
