--- a/resume.html
+++ b/resume.html
@@ -15,25 +15,99 @@
 </head>
 
 <body>
+
     <nav>
         <div class="topnav">
             <a href="index.html">Home</a>
             <a href="bio.html">About Me</a>
             <a href="projects.html">Projects</a>
-            <a href="resume.html">Resume</a>
+            <a class="active" href="resume.html">Resume</a>
             <a href="contact.html">Contact Me</a>
             <button class="mobile-menu" id="mobile-menu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
         </div>
     </nav>
+    <section class="resumeContainer">
+        <div class="sidebarContainer">
+            <div id="sidebar">
+                <img src="./imgs/headshot-circled.png" alt="">
+                <ul>
+                    <li>
+                        <strong>Name:</strong> Ted McGinness</li>
+                    <li>
+                        <strong>Location:</strong> Chicago, IL</li>
+                    <li>
+                        <strong>Email:</strong> ttmcginness22@gmail.com</li>
+                    <li>
+                        <strong>Phone:</strong> 630-487-0998</li>
+
+                    <li>
+                        <strong>Skills</strong>:</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JS</li>
+                    <li>jQuery</li>
+                    <li>VS Code</li>
+                    <li>Github</li>
+                    <li>Chrome Dev Tools</li>
 
 
+                </ul>
+            </div>
+        </div>
+        <div class="information">
+            <div class="topbox">
+                <div class="resumeCard" id="education">
+                    <div>
+                        <h2>Education</h2>
+                    </div>
+                    <div>
+                        <h3>
+                            General Assembly
+                        </h3>
+                        <p>
+                            Certificate: Software Engineering - January, 2022 - April, 2022</p>
+                    </div>
+                    <div>
+                        <h3>
+                            Eastern Illinois University
+                        </h3>
+                        <p>
+                            Degree: Bachelors in Kinesiology - August, 2010 - May, 2013</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="bottombox">
+                <div class="resumeCard" id="experience">
+                    <div>
+                        <h2>Experience</h2>
+                    </div>
+                    <div>
+                        <h3>
+                            General Assembly Software Engineering Fellow
+                        </h3>
+                        <p>
+                            Certificate: Software Engineering - January, 2022 - April, 2022</p>
+                    </div>
+                    <div>
+                        <h3>
+                            Crafted Websites
+                        </h3>
+                        <p>
+                            Owner/Founder
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!--Footer-->
     <footer>
-        <div class="footerContent">
-            <h3>Ted McGinness</h3>
+        <div class="active footerContent">
+            <h3 class="active">Ted McGinness</h3>
             <p></p>
 
             <ul class="socials">
