--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <div class="topnav">
-            <a href="index.html">Home</a>
+            <a class="active" href="index.html">Home</a>
             <a href="bio.html">About Me</a>
             <a href="projects.html">Projects</a>
             <a href="resume.html">Resume</a>
