completed projects page and added files

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             <a href="projects.html">Projects</a>
             <a href="resume.html">Resume</a>
             <a class="active" href="contact.html">Contact Me</a>
-            <button class="mobile-menu" id="mobile-menu">
+            <button class="mobileMenu" id="mobileMenu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
         </div>
@@ -30,36 +30,34 @@
     <section class="contact">
         <div class="leftbox">
             <div>
-
+                <h2>Get In Touch!</h2>
                 <ul>
-                    <li>Github: Link</li>
-                    <li>LinkIn: Link</li>
-                    <li>Email: ttmcginness22@gmail.com</li>
-                    <li>Phone: 630-487-0998</li>
-                    <li>WordPress Design: craftedwebsite.design</li>
+                    <li>
+                        <a target="blank" href="https://github.com/tmcginness/">
+                            <ion-icon name="logo-github"></ion-icon> Github</a>
+                    </li>
+                    <li>
+                        <a target="blank" href="https://www.linkedin.com/in/ted-mcginness/">
+                            <ion-icon name="logo-linkedin"></ion-icon> LinkedIn</a>
+                    </li>
+                    <li>
+                        <a target="blank" href="mailto:ttmcginness22@gmail.com">
+                            <ion-icon name="mail-outline"></ion-icon> ttmcginness22@gmail.com</a>
+                    </li>
+                    <li>
+                        <a target="blank" href="tel:6304870998">
+                            <ion-icon name="call-outline"></ion-icon> 630-487-0998</a>
+                    </li>
+                    <li>
+                        <a target="blank" href="https://craftedwebsite.design">
+                            <ion-icon name="logo-chrome"></ion-icon> Craftedwebsite.design</a>
+                    </li>
                 </ul>
             </div>
         </div>
 
         <div class="rightbox">
 
-            <div>
-                <h2>Education</h2>
-            </div>
-            <div>
-                <h3>
-                    General Assembly
-                </h3>
-                <p>
-                    Certificate: Software Engineering - January, 2022 - April, 2022</p>
-            </div>
-            <div>
-                <h3>
-                    Eastern Illinois University
-                </h3>
-                <p>
-                    Degree: Bachelors in Kinesiology - August, 2010 - May, 2013</p>
-            </div>
         </div>
 
 
