--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
             <a href="projects.html">Projects</a>
             <a class="active" href="resume.html">Resume</a>
             <a href="contact.html">Contact Me</a>
-            <button class="mobile-menu" id="mobile-menu">
+            <button class="mobileMenu" id="mobileMenu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
         </div>
@@ -34,23 +34,30 @@
                 <img src="./imgs/headshot-circled.png" alt="">
                 <ul>
                     <li>
-                        <strong>Name:</strong> Ted McGinness</li>
+                        <strong>Ted McGinness
+                        </strong>
+                    </li>
                     <li>
-                        <strong>Location:</strong> Chicago, IL</li>
+                        <ion-icon name="navigate"></ion-icon> Chicago, IL</li>
                     <li>
-                        <strong>Email:</strong> ttmcginness22@gmail.com</li>
+                        <ion-icon name="mail"></ion-icon> ttmcginness22@gmail.com</li>
                     <li>
-                        <strong>Phone:</strong> 630-487-0998</li>
+                        <ion-icon name="call"></ion-icon> 630-487-0998</li>
 
                     <li>
                         <strong>Skills</strong>:</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JS</li>
-                    <li>jQuery</li>
-                    <li>VS Code</li>
-                    <li>Github</li>
-                    <li>Chrome Dev Tools</li>
+                    <li>
+                        <ion-icon name="logo-html5"></ion-icon> HTML</li>
+                    <li>
+                        <ion-icon name="logo-css3"></ion-icon> CSS</li>
+                    <li>
+                        <ion-icon name="logo-javascript"></ion-icon> JS</li>
+                    <li>
+                        <ion-icon name="logo-nodejs"></ion-icon> jQuery</li>
+                    <li>
+                        <ion-icon name="logo-github"></ion-icon> Github</li>
+                    <li>
+                        <ion-icon name="logo-chrome"></ion-icon> Chrome Dev Tools</li>
 
 
                 </ul>
@@ -88,15 +95,30 @@
                         <h3>
                             General Assembly Software Engineering Fellow
                         </h3>
+                        <p>Software Engineering Fellow</p>
                         <p>
-                            Certificate: Software Engineering - January, 2022 - April, 2022</p>
+                            Certificate Software Engineering: January, 2022 - April, 2022</p>
                     </div>
                     <div>
                         <h3>
                             Crafted Websites
                         </h3>
                         <p>
-                            Owner/Founder
+                            WordPress Web Design
+                        </p>
+                        <p>
+                            Owner/Founder: January, 2016 - Present
+                        </p>
+                    </div>
+                    <div>
+                        <h3>
+                            Dist. 159
+                        </h3>
+                        <p>
+                            Elementary Education
+                        </p>
+                        <p>
+                            Teacher: August 2017 - December 2021
                         </p>
                     </div>
                 </div>
