--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
             <a href="projects.html">Projects</a>
             <a href="resume.html">Resume</a>
             <a href="contact.html">Contact Me</a>
-            <button class="mobile-menu" id="mobile-menu">
+            <button class="mobileMenu" id="mobileMenu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
         </div>
@@ -34,29 +34,50 @@
                 <!-- Photo by Pavel Danilyuk from Pexels -->
                 <img src="./imgs/RPS.jpeg" alt="Rock Paper Scissors" class="projectPic" />
                 <h3 class="projectTitle">Rock, Paper, Scissors</h3>
-                <button class="accordion">Section 1</button>
-                <div class="panel">
-                    <p>Lorem ipsum...</p>
+                <button class="accordion">Read More</button>
+                <div class="readMore">
+                    <p>A simple Rock, Paper, Scissors browser-based game. Play against the computer and see how you fare!</p>
+                    <p>
+                        <a target="_blank" href="./projects/rps.html">Play now!</a>
+                    </p>
+                    <p>
+                        <a target="_blank" href="https://github.com/tmcginness/rockpaperscissors">
+                            <ion-icon name="logo-github"></ion-icon> See the Project</a>
+                    </p>
                 </div>
 
             </div>
             <div class="projectCard">
                 <!-- Photo by Pavel Danilyuk from Pexels -->
-                <img src="./imgs/RPS.jpeg" alt="Rock Paper Scissors" class="projectPic" />
-                <h3 class="projectTitle">Rock, Paper, Scissors</h3>
-                <button class="accordion">Section 1</button>
-                <div class="panel">
-                    <p>Lorem ipsum...</p>
+                <img src="./imgs/lawnmower.jpeg" alt="Lawn mower" class="projectPic" />
+                <h3 class="projectTitle">Landscaper Text Game</h3>
+                <button class="accordion">Read More</button>
+                <div class="readMore">
+                    <p>A simple Rock, Paper, Scissors browser-based game. Play against the computer and see how you fare!</p>
+                    <p>
+                        <a target="_blank" href="./projects/landscaping.html">Play now!</a>
+                    </p>
+                    <p>
+                        <a target="_blank" href="https://github.com/tmcginness/landscaper">
+                            <ion-icon name="logo-github"></ion-icon> See the Project</a>
+                    </p>
                 </div>
 
             </div>
             <div class="projectCard">
                 <!-- Photo by Pavel Danilyuk from Pexels -->
-                <img src="./imgs/RPS.jpeg" alt="Rock Paper Scissors" class="projectPic" />
-                <h3 class="projectTitle">Rock, Paper, Scissors</h3>
-                <button class="accordion">Section 1</button>
-                <div class="panel">
-                    <p>Lorem ipsum...</p>
+                <img src="./imgs/clickbattle.png" alt="Click Battle Game" class="projectPic" />
+                <h3 class="projectTitle">Click Battle!</h3>
+                <button class="accordion">Read More</button>
+                <div class="readMore">
+                    <p>A simple Rock, Paper, Scissors browser-based game. Play against the computer and see how you fare!</p>
+                    <p>
+                        <a target="_blank" href="./projects/click.html">Play now!</a>
+                    </p>
+                    <p>
+                        <a target="_blank" href="https://github.com/tmcginness/clickbattle">
+                            <ion-icon name="logo-github"></ion-icon> See the Project</a>
+                    </p>
                 </div>
 
             </div>
