completed media queries. site now fully responsive

--- a/contact.html
+++ b/contact.html
@@ -74,18 +74,18 @@
 
             <ul class="socials">
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/tmcginness/">
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/ted-mcginness/">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <ion-icon name="logo-twitter"></ion-icon>
+                    <a target="blank" href="mailto:ttmcginness22@gmail.com">
+                        <ion-icon name="mail-outline"></ion-icon>
                     </a>
                 </li>
             </ul>
