--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav>
-        <div class="topnav">
+        <div id="myTopnav" class="topnav">
             <a class="active" href="index.html">Home</a>
             <a href="bio.html">About Me</a>
             <a href="projects.html">Projects</a>
@@ -27,14 +27,17 @@
             </button>
         </div>
     </nav>
+
+
+
     <!-- Hero Image by Negative Space https://www.pexels.com/photo/grayscale-photo-of-computer-laptop-near-white-notebook-and-ceramic-mug-on-table-169573/ -->
     <section class="hero" id="hero">
 
         <div class="blurb">
             <h2 class="blurbTitle">Hey, I'm Ted</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed dolorem fugit sapiente porro veniam pariatur dolore
-                nostrum delectus inventore tempore minus nemo, iste ullam illo laboriosam maiores repudiandae quos!
+                Thank you for visiting my portfolio! Feel free to look around. Learn more about me, check out my work, and get in touch so
+                we can grab a coffee!
             </p>
         </div>
     </section>
@@ -47,18 +50,18 @@
 
             <ul class="socials">
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/tmcginness/">
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/ted-mcginness/">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <ion-icon name="logo-twitter"></ion-icon>
+                    <a target="blank" href="mailto:ttmcginness22@gmail.com">
+                        <ion-icon name="mail-outline"></ion-icon>
                     </a>
                 </li>
             </ul>
