--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                 <!-- Photo by Pavel Danilyuk from Pexels -->
                 <img src="./imgs/RPS.jpeg" alt="Rock Paper Scissors" class="projectPic" />
                 <h3 class="projectTitle">Rock, Paper, Scissors</h3>
-                <button class="accordion">Read More</button>
+                <button id="project1" class="accordion">Read More</button>
                 <div class="readMore">
                     <p>A simple Rock, Paper, Scissors browser-based game. Play against the computer and see how you fare!</p>
                     <p>
@@ -51,7 +51,7 @@
                 <!-- Photo by Pavel Danilyuk from Pexels -->
                 <img src="./imgs/lawnmower.jpeg" alt="Lawn mower" class="projectPic" />
                 <h3 class="projectTitle">Landscaper Text Game</h3>
-                <button class="accordion">Read More</button>
+                <button id="project2" class="accordion">Read More</button>
                 <div class="readMore">
                     <p>A simple Rock, Paper, Scissors browser-based game. Play against the computer and see how you fare!</p>
                     <p>
@@ -68,7 +68,7 @@
                 <!-- Photo by Pavel Danilyuk from Pexels -->
                 <img src="./imgs/clickbattle.png" alt="Click Battle Game" class="projectPic" />
                 <h3 class="projectTitle">Click Battle!</h3>
-                <button class="accordion">Read More</button>
+                <button id="project3" class="accordion">Read More</button>
                 <div class="readMore">
                     <p>A simple Rock, Paper, Scissors browser-based game. Play against the computer and see how you fare!</p>
                     <p>
@@ -89,21 +89,22 @@
     <footer>
         <div class="footerContent">
             <h3>Ted McGinness</h3>
+            <p></p>
 
             <ul class="socials">
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/tmcginness/">
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/ted-mcginness/">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <ion-icon name="logo-twitter"></ion-icon>
+                    <a target="blank" href="mailto:ttmcginness22@gmail.com">
+                        <ion-icon name="mail-outline"></ion-icon>
                     </a>
                 </li>
             </ul>
