--- a/resume.html
+++ b/resume.html
@@ -128,24 +128,24 @@
 
     <!--Footer-->
     <footer>
-        <div class="active footerContent">
-            <h3 class="active">Ted McGinness</h3>
+        <div class="footerContent">
+            <h3>Ted McGinness</h3>
             <p></p>
 
             <ul class="socials">
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/tmcginness/">
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/ted-mcginness/">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <ion-icon name="logo-twitter"></ion-icon>
+                    <a target="blank" href="mailto:ttmcginness22@gmail.com">
+                        <ion-icon name="mail-outline"></ion-icon>
                     </a>
                 </li>
             </ul>
