Added styling and fonts. Refined css. Fixed typos. Done!

--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -53,7 +56,8 @@
                 <h3 class="projectTitle">Landscaper Text Game</h3>
                 <button id="project2" class="accordion">Read More</button>
                 <div class="readMore">
-                    <p>A simple Rock, Paper, Scissors browser-based game. Play against the computer and see how you fare!</p>
+                    <p>A simple text-based browser game. Start from scratch as a brand-new landscaping business, and build yourself
+                        up to an empire!</p>
                     <p>
                         <a target="_blank" href="./projects/landscaping.html">Play now!</a>
                     </p>
@@ -70,7 +74,8 @@
                 <h3 class="projectTitle">Click Battle!</h3>
                 <button id="project3" class="accordion">Read More</button>
                 <div class="readMore">
-                    <p>A simple Rock, Paper, Scissors browser-based game. Play against the computer and see how you fare!</p>
+                    <p>A simple browser-based game where you see if you can out-click the computer! The computer starts off
+                        slow, but quickly becomes faster. Use the bombs to slow it down! </p>
                     <p>
                         <a target="_blank" href="./projects/click.html">Play now!</a>
                     </p>
