--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -71,14 +74,14 @@
                     </div>
                     <div>
                         <h3>
-                            General Assembly
+                            - General Assembly
                         </h3>
                         <p>
                             Certificate: Software Engineering - January, 2022 - April, 2022</p>
                     </div>
                     <div>
                         <h3>
-                            Eastern Illinois University
+                            - Eastern Illinois University
                         </h3>
                         <p>
                             Degree: Bachelors in Kinesiology - August, 2010 - May, 2013</p>
@@ -93,7 +96,7 @@
                     </div>
                     <div>
                         <h3>
-                            General Assembly Software Engineering Fellow
+                            - General Assembly Software Engineering Fellow
                         </h3>
                         <p>Software Engineering Fellow</p>
                         <p>
@@ -101,7 +104,7 @@
                     </div>
                     <div>
                         <h3>
-                            Crafted Websites
+                            - Crafted Websites
                         </h3>
                         <p>
                             WordPress Web Design
@@ -112,7 +115,7 @@
                     </div>
                     <div>
                         <h3>
-                            Dist. 159
+                            - Dist. 159
                         </h3>
                         <p>
                             Elementary Education
